2005-11-28  Jorn Baayen  <jorn@openedhand.com>

	* Initial import of libgconf-bridge, a small GConf convenience
	library.
